--- a/wwwroot/ChromebookWebApp.styles.css
+++ b/wwwroot/ChromebookWebApp.styles.css
@@ -1,8 +1,10 @@
 /* /Shared/MainLayout.razor.rz.scp.css */
-.page[b-oi64nmevrx] {
+.page[b-oi64nmevrx],td[b-oi64nmevrx],th[b-oi64nmevrx] {
     position: relative;
     display: flex;
     flex-direction: column;
+    background-color: #1c1c1c;
+    color: #cdcdcd;
 }
 
 .main[b-oi64nmevrx] {
@@ -10,7 +12,7 @@
 }
 
 .sidebar[b-oi64nmevrx] {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, #050505 30%, #00650d 100%);
 }
 
 .top-row[b-oi64nmevrx] {
