--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -2,6 +2,8 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: #272727;
+    color: #e1e1e1;
 }
 
 a, .btn-link {
